--- a/wavelet.ipynb
+++ b/wavelet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,14 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "def dwt(data,func,num):\n",
     "    for i in range(num):\n",
     "        data,trash = pywt.dwt(data,func)\n",
-    "        print(len(data))\n",
+    "        \n",
     "    return data\n",
     "        "
    ]
@@ -62,6 +62,77 @@
    "source": [
     "dwt([1,2,3,4,5,6,7,8,9,10]*190,'db1',3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp = [[1,2,3,4,5],[6,7,8,9,10],[11,12,13,14,15],[16,17,18,19,20],[21,22,23,24,25]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp_array = np.array(temp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(temp_array.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp_list = temp_array.tolist()\n",
+    "result_list = []\n",
+    "for array in temp_list:\n",
+    "    result_list.append(dwt(array,'db2',1))\n",
+    "print(np.array(result_list).shape)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    "
+   ]
   }
  ],
  "metadata": {
@@ -80,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
